# conveyor

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: web-e2e.yml
crates/conveyor-config/: README.md
crates/conveyor-dsl/: Cargo.toml  README.md
crates/conveyor-dsl/src/: lib.rs  registry.rs
crates/conveyor-grpc/src/: checkpoint_handler.rs  registry_handler.rs
crates/conveyor-operator/: README.md
crates/conveyor-operator/src/crd/: mod.rs  pipeline.rs  sink.rs  source.rs  (+1 more)
crates/conveyor-registry/: README.md
crates/conveyor-router/: README.md
crates/conveyor-sidecar/: README.md
crates/conveyorctl/: README.md
crates/etl-buffer/: Cargo.toml
crates/etl-buffer/src/: manager.rs
crates/etl-config/: Cargo.toml
crates/etl-dlq/: Cargo.toml
crates/etl-dlq/src/: manager.rs  record.rs
crates/etl-dsl/: Cargo.toml
crates/etl-dsl/src/: convert.rs  lib.rs  manifest.rs  optimizer.rs  registry.rs
crates/etl-graphql/: Cargo.toml
crates/etl-graphql/src/: lib.rs  resolvers.rs  server.rs  types.rs
crates/etl-grpc/: Cargo.toml
crates/etl-grpc/src/: checkpoint_handler.rs  lib.rs  lookup_client.rs  registry_handler.rs  server.rs  sidecar_handler.rs  sink_client.rs  source_handler.rs  transform_client.rs
crates/etl-metrics/: Cargo.toml
crates/etl-metrics/src/: lib.rs
crates/etl-operator/: Dockerfile
crates/etl-operator/deploy/: kustomization.yaml
crates/etl-proto/: Cargo.toml  build.rs
crates/etl-proto/proto/: backup.proto  checkpoint.proto  common.proto  lookup.proto  registry.proto  router.proto  sidecar.proto  sink.proto  source.proto  transform.proto
crates/etl-proto/src/: lib.rs
crates/etl-raft/: Cargo.toml
crates/etl-raft/src/: backup_service.rs  commands.rs  core.rs  lib.rs  network.rs  node.rs  state_machine.rs  transport.rs
crates/etl-registry/: Cargo.toml
crates/etl-registry/src/: group_coordinator.rs  load_balancer.rs  service_registry.rs
crates/etl-router/: Cargo.toml
crates/etl-router/src/: main.rs
crates/etl-routing/: Cargo.toml
crates/etl-routing/src/: engine.rs  matcher.rs
crates/etl-sidecar/: Cargo.toml
crates/etl-sidecar/src/: config.rs  data_plane.rs  main.rs
crates/etlctl/: Cargo.toml
crates/etlctl/src/commands/: apply.rs  backup.rs  delete.rs  describe.rs  get.rs  graph.rs  validate.rs
crates/etlctl/src/storage/: mod.rs
examples/manifests/pipelines/: user-analytics.yaml  user-archive.yaml
examples/manifests/sinks/: error-handler.yaml  grpc-analytics.yaml  s3-archive.yaml
examples/manifests/sources/: kafka-user-events.yaml
examples/manifests/transforms/: filter-active-users.yaml  mask-pii.yaml
web/: .env.example  README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
web/e2e/playwright/: auth.spec.ts  cluster.spec.ts  dashboard.spec.ts  metrics.spec.ts  navigation.spec.ts  pipelines.spec.ts  services.spec.ts
web/prisma/: schema.postgresql.prisma  schema.prisma  seed.ts
web/prisma/prisma/: dev.db
web/src/: app.d.ts  hooks.server.ts
web/src/lib/: auth-client.ts
web/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
(+59 files in other folders)
