[package]
name = "etl-dsl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "YAML DSL parser for ETL Router pipeline definitions"

[dependencies]
etl-routing.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
anyhow.workspace = true
thiserror = "1.0"
