[package]
name = "etl-grpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "gRPC handlers and server for ETL Router"

[dependencies]
etl-proto.workspace = true
etl-config.workspace = true
etl-raft.workspace = true
etl-registry.workspace = true
etl-buffer.workspace = true
etl-routing.workspace = true
etl-graphql.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-stream.workspace = true
uuid.workspace = true
chrono.workspace = true
