[package]
name = "etl-router"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-availability ETL routing layer with Raft consensus"

[[bin]]
name = "etl-router"
path = "src/main.rs"

[dependencies]
etl-config.workspace = true
etl-grpc.workspace = true

tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
