[package]
name = "etl-routing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Routing engine and pipeline management for ETL Router"

[dependencies]
etl-proto.workspace = true
etl-registry.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
regex.workspace = true
parking_lot.workspace = true
anyhow.workspace = true
